--- a/src/assets/css/perfomance.css
+++ b/src/assets/css/perfomance.css
@@ -1,10 +1,24 @@
 .pers{
-    padding:3rem;
-    margin:0.5rem;
+    /* padding:3rem; */
+    /* margin:0.5rem; */
     border-radius:0.5rem;
-    background-color:white;
+    background:transparent;
     font-size:13px;
 }
+.pie-box,.bar-box,.line-box{
+    background-color:rgb(255, 255, 255);
+  
+    box-shadow: 0px 2px 6px rgb(194, 218, 201);
+}
+
+.pers h6{
+    font-size: 13px;
+    font-weight: 600;
+    margin-bottom:1rem;
+    color: rgb(11, 148, 79);
+  }
+
+
 
 .per-stat{
     color:rgb(98, 120, 126);
@@ -12,12 +26,7 @@
 
     font-size:11px;
 }
-.pers h6{
-    font-size: 13px;
-    font-weight: 600;
-    margin-bottom:1rem;
-    color: rgb(68, 71, 60);
-  }
+
 
 .tid-task{
     text-align:left;
@@ -27,7 +36,7 @@
 }
 .per-tihead{
     margin-bottom:none;
-    color: rgb(105, 156, 75);
+    color: rgb(10, 151, 109);
     font-size:1.3rem;   
     font-weight:900;    
 }
@@ -53,16 +62,16 @@
     border-radius:5px;
 }
 .per-des{
-    padding:3rem;
+    padding:2.5rem;
 
 }
 
 .per-des h5{
     font-size:13px;
     font-weight: 500;
-     color: rgb(103, 141, 67);
+     color: rgb(11, 150, 108);
      background-color:white;
-     padding:7px;
+     padding:14px;
      padding-left:11px;
      padding-right:11px;
      border-radius:4px;
