--- a/src/assets/css/notes.css
+++ b/src/assets/css/notes.css
@@ -1,12 +1,30 @@
 .notes{
-    background-color:rgb(241, 247, 246);
+    background-color:rgb(247, 247, 252);
     height:20rem;
     border-radius:9px;
     margin:0rem;
     padding:2rem;
+    border: solid 1px rgb(234, 234, 241);
 }
 
 .noterow{
     padding:3rem;
     margin-top:4rem;
+}
+.crno-btn{
+    margin-top:2rem;
+    background-color:black;
+    /* height:3rem; */
+    font-weight:600;
+    font-size:14px;
+    padding:0.8rem;
+    padding-left:1.2rem;
+    padding-right:1.2rem;
+    border: none;
+    border-radius:23px;
+    color: white;
+}
+span{
+    /* line-height:50px; */
+        vertical-align:middle; 
 }
