--- a/src/assets/css/notes.css
+++ b/src/assets/css/notes.css
@@ -29,3 +29,14 @@ span{
     /* line-height:50px; */
         vertical-align:middle; 
 }
+
+
+.note-form input {
+    height: 2.9rem;
+    width: 100%;
+    border-radius: 7px;
+    padding-left: 1.7rem;
+    border: none;
+    /* border: solid 1px rgb(230, 229, 236); */
+    background-color:rgb(239, 239, 245);
+  }
