--- a/src/assets/css/notes.css
+++ b/src/assets/css/notes.css
@@ -1,11 +1,69 @@
 .notes{
     background-color:rgb(250, 250, 253);
-    height:20rem;
+    /* height:20rem; */
     border-radius:7px;
-    padding:2rem;
+    padding:1rem;
     border: solid 1px rgb(234, 234, 241);
     margin-top:1rem;
 }
+
+
+.n-title {
+    color: black;
+    font-size: 15px;
+    margin-top: 0.5rem;
+    font-weight: 600;
+  }
+  .n-des {
+    color: black;
+    font-size: 13px;
+    margin-top: 0.5rem;
+    font-weight: 500;
+  }
+  .n-self {
+    color: black;
+    font-size: 13px;
+    margin-top: 0.5rem;
+    font-weight: 400;
+  }
+  
+  .note-delete {
+    padding: 0.5rem;
+    border-radius: 1rem;
+    color: white;
+    background-color: rgb(185, 97, 70);
+    border: none;
+    font-size: 13px;
+    font-weight: 600;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  
+  .update-note {
+    padding: 0.5rem;
+    border-radius: 1rem;
+    color: white;
+    background-color: rgb(69, 127, 160);
+    border: none;
+    font-size: 13px;
+    font-weight: 600;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-left: 1rem;
+  }
+  
+  .colla-btn{
+    color: rgb(37, 141, 189);
+    /* background-color:rgb(243, 243, 243); */
+    padding: 1rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    border-radius:3px;
+    border-bottom: solid 2px rgb(228, 237, 243);
+    font-weight:600;
+    font-size: 13.3px;
+    width: 100%;
+  }
 
 .noterow{
     padding:3rem;
@@ -30,6 +88,9 @@ span{
         vertical-align:middle; 
 }
 
+.note-form{
+    text-align:left;
+}
 
 .note-form input {
     height: 2.9rem;
@@ -37,6 +98,53 @@ span{
     border-radius: 7px;
     padding-left: 1.7rem;
     border: none;
+    font-size:13px;
     /* border: solid 1px rgb(230, 229, 236); */
-    background-color:rgb(239, 239, 245);
+    background-color:rgb(239, 245, 245);
   }
+
+
+.note-form label {
+    text-align: left;
+    font-size: 13px;
+    font-weight: 600;
+    color: rgb(54, 143, 179);
+    margin-top: 1.3rem;
+  }
+
+  .submit {
+    font-size: 13px;
+    color: rgb(255, 255, 255);
+    border: none;
+    background-color: rgb(63, 117, 153);
+    margin-top: 2rem;
+    border-radius: 19px;
+    width: 7rem;
+    font-weight: 600;
+    height: 2.8rem;
+  }
+
+  .noti{
+      color: rgb(49, 126, 156);
+      margin-right: 1.2rem;
+      border-radius:5px;
+  }
+
+  .modal-title{
+      color: rgb(48, 128, 194);
+      font-size: 14px;
+  }
+
+
+ 
+
+  .wrap {
+    border: 1px solid #aaa;
+    margin: 10px;
+    display: flex;
+  }
+  
+  .wrap span {
+    align-self: flex-end;
+  }
+  
