--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -91,7 +91,7 @@ li:hover {
   height: 5rem;
   text-align: center;
   background-color: rgb(255, 255, 255);
-  border-radius: 9` px;
+  border-radius: 9px;
 
 }
 
